[sync-cmds] Testing CD with command update. Adds status command implementation
